# UPLC-Debug

./: Cargo.toml  README.md
src/: main.rs
uplc-debug/: aiken.toml  plutus.json
uplc-debug/validators/: order.ak
